// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button style params borderRadius large 1`] = `
<DocumentFragment>
  <button
    class="QxBaseButton QxBaseButton_size_medium QxBaseButton_color_brand QxBaseButton_type_contained QxBaseButton_borderRadius_large QxButton QxButton_size_medium css-ilckt4-QxBaseButton-root-QxButton-root"
    data-testid="testStyleParams-borderRadius-large"
    type="button"
  >
    <div
      class="QxButton-content css-ovifzf-QxButton-content"
    >
      Button
    </div>
  </button>
</DocumentFragment>
`;

exports[`Button style params borderRadius max 1`] = `
<DocumentFragment>
  <button
    class="QxBaseButton QxBaseButton_size_medium QxBaseButton_color_brand QxBaseButton_type_contained QxBaseButton_borderRadius_max QxButton QxButton_size_medium css-1a2libf-QxBaseButton-root-QxButton-root"
    data-testid="testStyleParams-borderRadius-max"
    type="button"
  >
    <div
      class="QxButton-content css-ovifzf-QxButton-content"
    >
      Button
    </div>
  </button>
</DocumentFragment>
`;

exports[`Button style params borderRadius medium 1`] = `
<DocumentFragment>
  <button
    class="QxBaseButton QxBaseButton_size_medium QxBaseButton_color_brand QxBaseButton_type_contained QxBaseButton_borderRadius_medium QxButton QxButton_size_medium css-1fbw8lm-QxBaseButton-root-QxButton-root"
    data-testid="testStyleParams-borderRadius-medium"
    type="button"
  >
    <div
      class="QxButton-content css-ovifzf-QxButton-content"
    >
      Button
    </div>
  </button>
</DocumentFragment>
`;

exports[`Button style params borderRadius small 1`] = `
<DocumentFragment>
  <button
    class="QxBaseButton QxBaseButton_size_medium QxBaseButton_color_brand QxBaseButton_type_contained QxBaseButton_borderRadius_small QxButton QxButton_size_medium css-vvdoj2-QxBaseButton-root-QxButton-root"
    data-testid="testStyleParams-borderRadius-small"
    type="button"
  >
    <div
      class="QxButton-content css-ovifzf-QxButton-content"
    >
      Button
    </div>
  </button>
</DocumentFragment>
`;

exports[`Button style params borderRadius xLarge 1`] = `
<DocumentFragment>
  <button
    class="QxBaseButton QxBaseButton_size_medium QxBaseButton_color_brand QxBaseButton_type_contained QxBaseButton_borderRadius_xLarge QxButton QxButton_size_medium css-e71xz4-QxBaseButton-root-QxButton-root"
    data-testid="testStyleParams-borderRadius-xLarge"
    type="button"
  >
    <div
      class="QxButton-content css-ovifzf-QxButton-content"
    >
      Button
    </div>
  </button>
</DocumentFragment>
`;

exports[`Button style params borderRadius xSmall 1`] = `
<DocumentFragment>
  <button
    class="QxBaseButton QxBaseButton_size_medium QxBaseButton_color_brand QxBaseButton_type_contained QxBaseButton_borderRadius_xSmall QxButton QxButton_size_medium css-1l712ja-QxBaseButton-root-QxButton-root"
    data-testid="testStyleParams-borderRadius-xSmall"
    type="button"
  >
    <div
      class="QxButton-content css-ovifzf-QxButton-content"
    >
      Button
    </div>
  </button>
</DocumentFragment>
`;

exports[`Button style params color brand 1`] = `
<DocumentFragment>
  <button
    class="QxBaseButton QxBaseButton_size_medium QxBaseButton_color_brand QxBaseButton_type_contained QxBaseButton_borderRadius_medium QxButton QxButton_size_medium css-1fbw8lm-QxBaseButton-root-QxButton-root"
    data-testid="testStyleParams-color-brand"
    type="button"
  >
    <div
      class="QxButton-content css-ovifzf-QxButton-content"
    >
      Button
    </div>
  </button>
</DocumentFragment>
`;

exports[`Button style params color danger 1`] = `
<DocumentFragment>
  <button
    class="QxBaseButton QxBaseButton_size_medium QxBaseButton_color_danger QxBaseButton_type_contained QxBaseButton_borderRadius_medium QxButton QxButton_size_medium css-tpd3op-QxBaseButton-root-QxButton-root"
    data-testid="testStyleParams-color-danger"
    type="button"
  >
    <div
      class="QxButton-content css-ovifzf-QxButton-content"
    >
      Button
    </div>
  </button>
</DocumentFragment>
`;

exports[`Button style params color info 1`] = `
<DocumentFragment>
  <button
    class="QxBaseButton QxBaseButton_size_medium QxBaseButton_color_info QxBaseButton_type_contained QxBaseButton_borderRadius_medium QxButton QxButton_size_medium css-j77i26-QxBaseButton-root-QxButton-root"
    data-testid="testStyleParams-color-info"
    type="button"
  >
    <div
      class="QxButton-content css-ovifzf-QxButton-content"
    >
      Button
    </div>
  </button>
</DocumentFragment>
`;

exports[`Button style params color secondary 1`] = `
<DocumentFragment>
  <button
    class="QxBaseButton QxBaseButton_size_medium QxBaseButton_color_secondary QxBaseButton_type_contained QxBaseButton_borderRadius_medium QxButton QxButton_size_medium css-qmz44v-QxBaseButton-root-QxButton-root"
    data-testid="testStyleParams-color-secondary"
    type="button"
  >
    <div
      class="QxButton-content css-ovifzf-QxButton-content"
    >
      Button
    </div>
  </button>
</DocumentFragment>
`;

exports[`Button style params color success 1`] = `
<DocumentFragment>
  <button
    class="QxBaseButton QxBaseButton_size_medium QxBaseButton_color_success QxBaseButton_type_contained QxBaseButton_borderRadius_medium QxButton QxButton_size_medium css-zm0qmi-QxBaseButton-root-QxButton-root"
    data-testid="testStyleParams-color-success"
    type="button"
  >
    <div
      class="QxButton-content css-ovifzf-QxButton-content"
    >
      Button
    </div>
  </button>
</DocumentFragment>
`;

exports[`Button style params color warning 1`] = `
<DocumentFragment>
  <button
    class="QxBaseButton QxBaseButton_size_medium QxBaseButton_color_warning QxBaseButton_type_contained QxBaseButton_borderRadius_medium QxButton QxButton_size_medium css-15xp5ld-QxBaseButton-root-QxButton-root"
    data-testid="testStyleParams-color-warning"
    type="button"
  >
    <div
      class="QxButton-content css-ovifzf-QxButton-content"
    >
      Button
    </div>
  </button>
</DocumentFragment>
`;

exports[`Button style params loading false 1`] = `
<DocumentFragment>
  <button
    class="QxBaseButton QxBaseButton_size_medium QxBaseButton_color_brand QxBaseButton_type_contained QxBaseButton_borderRadius_medium QxButton QxButton_size_medium css-1fbw8lm-QxBaseButton-root-QxButton-root"
    data-testid="testStyleParams-loading-false"
    type="button"
  >
    <div
      class="QxButton-content css-ovifzf-QxButton-content"
    >
      Button
    </div>
  </button>
</DocumentFragment>
`;

exports[`Button style params loading true 1`] = `
<DocumentFragment>
  <button
    class="QxBaseButton QxBaseButton_size_medium QxBaseButton_color_brand QxBaseButton_type_contained QxBaseButton_borderRadius_medium QxBaseButton_loading QxButton QxButton_size_medium QxButton_loading css-1fy9cfh-QxBaseButton-root-QxButton-root"
    data-testid="testStyleParams-loading-true"
    disabled=""
    type="button"
  >
    <div
      class="QxButton-content css-1koh81x-QxButton-content"
    >
      Button
    </div>
    <div
      class="QxLoader QxLoader_size_medium QxBaseButton-loader css-1705nxk-QxLoader-root-QxBaseButton-loader"
    >
      <div
        class="QxLoader-dot css-l1am7n-QxLoader-dot"
      />
      <div
        class="QxLoader-dot css-l1am7n-QxLoader-dot"
      />
      <div
        class="QxLoader-dot css-l1am7n-QxLoader-dot"
      />
    </div>
  </button>
</DocumentFragment>
`;

exports[`Button style params size large 1`] = `
<DocumentFragment>
  <button
    class="QxBaseButton QxBaseButton_size_large QxBaseButton_color_brand QxBaseButton_type_contained QxBaseButton_borderRadius_medium QxButton QxButton_size_large css-1lj498o-QxBaseButton-root-QxButton-root"
    data-testid="testStyleParams-size-large"
    type="button"
  >
    <div
      class="QxButton-content css-ovifzf-QxButton-content"
    >
      Button
    </div>
  </button>
</DocumentFragment>
`;

exports[`Button style params size medium 1`] = `
<DocumentFragment>
  <button
    class="QxBaseButton QxBaseButton_size_medium QxBaseButton_color_brand QxBaseButton_type_contained QxBaseButton_borderRadius_medium QxButton QxButton_size_medium css-1fbw8lm-QxBaseButton-root-QxButton-root"
    data-testid="testStyleParams-size-medium"
    type="button"
  >
    <div
      class="QxButton-content css-ovifzf-QxButton-content"
    >
      Button
    </div>
  </button>
</DocumentFragment>
`;

exports[`Button style params size small 1`] = `
<DocumentFragment>
  <button
    class="QxBaseButton QxBaseButton_size_small QxBaseButton_color_brand QxBaseButton_type_contained QxBaseButton_borderRadius_medium QxButton QxButton_size_small css-2y01ra-QxBaseButton-root-QxButton-root"
    data-testid="testStyleParams-size-small"
    type="button"
  >
    <div
      class="QxButton-content css-lmfykt-QxButton-content"
    >
      Button
    </div>
  </button>
</DocumentFragment>
`;

exports[`Button style params size xSmall 1`] = `
<DocumentFragment>
  <button
    class="QxBaseButton QxBaseButton_size_xSmall QxBaseButton_color_brand QxBaseButton_type_contained QxBaseButton_borderRadius_medium QxButton QxButton_size_xSmall css-9u94k8-QxBaseButton-root-QxButton-root"
    data-testid="testStyleParams-size-xSmall"
    type="button"
  >
    <div
      class="QxButton-content css-ovifzf-QxButton-content"
    >
      Button
    </div>
  </button>
</DocumentFragment>
`;

exports[`Button style params type contained 1`] = `
<DocumentFragment>
  <button
    class="QxBaseButton QxBaseButton_size_medium QxBaseButton_color_brand QxBaseButton_type_contained QxBaseButton_borderRadius_medium QxButton QxButton_size_medium css-1fbw8lm-QxBaseButton-root-QxButton-root"
    data-testid="testStyleParams-type-contained"
    type="button"
  >
    <div
      class="QxButton-content css-ovifzf-QxButton-content"
    >
      Button
    </div>
  </button>
</DocumentFragment>
`;

exports[`Button style params type outlined 1`] = `
<DocumentFragment>
  <button
    class="QxBaseButton QxBaseButton_size_medium QxBaseButton_color_brand QxBaseButton_type_outlined QxBaseButton_borderRadius_medium QxButton QxButton_size_medium css-61ndx9-QxBaseButton-root-QxButton-root"
    data-testid="testStyleParams-type-outlined"
    type="button"
  >
    <div
      class="QxButton-content css-ovifzf-QxButton-content"
    >
      Button
    </div>
  </button>
</DocumentFragment>
`;

exports[`Button style params type text 1`] = `
<DocumentFragment>
  <button
    class="QxBaseButton QxBaseButton_size_medium QxBaseButton_color_brand QxBaseButton_type_text QxBaseButton_borderRadius_medium QxButton QxButton_size_medium css-ws1lc9-QxBaseButton-root-QxButton-root"
    data-testid="testStyleParams-type-text"
    type="button"
  >
    <div
      class="QxButton-content css-ovifzf-QxButton-content"
    >
      Button
    </div>
  </button>
</DocumentFragment>
`;

exports[`IconButton style params borderRadius large 1`] = `
<DocumentFragment>
  <button
    class="QxBaseButton QxBaseButton_size_medium QxBaseButton_color_brand QxBaseButton_type_contained QxBaseButton_borderRadius_large QxIconButton QxIconButton_size_medium css-173josa-QxBaseButton-root-QxIconButton-root"
    data-testid="testStyleParams-borderRadius-large"
    type="button"
  >
    <div
      class="QxIconButton-icon css-10kmd5c-QxIconButton-icon"
    >
      Button
    </div>
  </button>
</DocumentFragment>
`;

exports[`IconButton style params borderRadius max 1`] = `
<DocumentFragment>
  <button
    class="QxBaseButton QxBaseButton_size_medium QxBaseButton_color_brand QxBaseButton_type_contained QxBaseButton_borderRadius_max QxIconButton QxIconButton_size_medium css-1uh590j-QxBaseButton-root-QxIconButton-root"
    data-testid="testStyleParams-borderRadius-max"
    type="button"
  >
    <div
      class="QxIconButton-icon css-10kmd5c-QxIconButton-icon"
    >
      Button
    </div>
  </button>
</DocumentFragment>
`;

exports[`IconButton style params borderRadius medium 1`] = `
<DocumentFragment>
  <button
    class="QxBaseButton QxBaseButton_size_medium QxBaseButton_color_brand QxBaseButton_type_contained QxBaseButton_borderRadius_medium QxIconButton QxIconButton_size_medium css-8ktg0a-QxBaseButton-root-QxIconButton-root"
    data-testid="testStyleParams-borderRadius-medium"
    type="button"
  >
    <div
      class="QxIconButton-icon css-10kmd5c-QxIconButton-icon"
    >
      Button
    </div>
  </button>
</DocumentFragment>
`;

exports[`IconButton style params borderRadius small 1`] = `
<DocumentFragment>
  <button
    class="QxBaseButton QxBaseButton_size_medium QxBaseButton_color_brand QxBaseButton_type_contained QxBaseButton_borderRadius_small QxIconButton QxIconButton_size_medium css-2sx44r-QxBaseButton-root-QxIconButton-root"
    data-testid="testStyleParams-borderRadius-small"
    type="button"
  >
    <div
      class="QxIconButton-icon css-10kmd5c-QxIconButton-icon"
    >
      Button
    </div>
  </button>
</DocumentFragment>
`;

exports[`IconButton style params borderRadius xLarge 1`] = `
<DocumentFragment>
  <button
    class="QxBaseButton QxBaseButton_size_medium QxBaseButton_color_brand QxBaseButton_type_contained QxBaseButton_borderRadius_xLarge QxIconButton QxIconButton_size_medium css-mp1wch-QxBaseButton-root-QxIconButton-root"
    data-testid="testStyleParams-borderRadius-xLarge"
    type="button"
  >
    <div
      class="QxIconButton-icon css-10kmd5c-QxIconButton-icon"
    >
      Button
    </div>
  </button>
</DocumentFragment>
`;

exports[`IconButton style params borderRadius xSmall 1`] = `
<DocumentFragment>
  <button
    class="QxBaseButton QxBaseButton_size_medium QxBaseButton_color_brand QxBaseButton_type_contained QxBaseButton_borderRadius_xSmall QxIconButton QxIconButton_size_medium css-ny3nnz-QxBaseButton-root-QxIconButton-root"
    data-testid="testStyleParams-borderRadius-xSmall"
    type="button"
  >
    <div
      class="QxIconButton-icon css-10kmd5c-QxIconButton-icon"
    >
      Button
    </div>
  </button>
</DocumentFragment>
`;

exports[`IconButton style params color brand 1`] = `
<DocumentFragment>
  <button
    class="QxBaseButton QxBaseButton_size_medium QxBaseButton_color_brand QxBaseButton_type_contained QxBaseButton_borderRadius_medium QxIconButton QxIconButton_size_medium css-8ktg0a-QxBaseButton-root-QxIconButton-root"
    data-testid="testStyleParams-color-brand"
    type="button"
  >
    <div
      class="QxIconButton-icon css-10kmd5c-QxIconButton-icon"
    >
      Button
    </div>
  </button>
</DocumentFragment>
`;

exports[`IconButton style params color danger 1`] = `
<DocumentFragment>
  <button
    class="QxBaseButton QxBaseButton_size_medium QxBaseButton_color_danger QxBaseButton_type_contained QxBaseButton_borderRadius_medium QxIconButton QxIconButton_size_medium css-v96kdr-QxBaseButton-root-QxIconButton-root"
    data-testid="testStyleParams-color-danger"
    type="button"
  >
    <div
      class="QxIconButton-icon css-10kmd5c-QxIconButton-icon"
    >
      Button
    </div>
  </button>
</DocumentFragment>
`;

exports[`IconButton style params color info 1`] = `
<DocumentFragment>
  <button
    class="QxBaseButton QxBaseButton_size_medium QxBaseButton_color_info QxBaseButton_type_contained QxBaseButton_borderRadius_medium QxIconButton QxIconButton_size_medium css-139os9-QxBaseButton-root-QxIconButton-root"
    data-testid="testStyleParams-color-info"
    type="button"
  >
    <div
      class="QxIconButton-icon css-10kmd5c-QxIconButton-icon"
    >
      Button
    </div>
  </button>
</DocumentFragment>
`;

exports[`IconButton style params color secondary 1`] = `
<DocumentFragment>
  <button
    class="QxBaseButton QxBaseButton_size_medium QxBaseButton_color_secondary QxBaseButton_type_contained QxBaseButton_borderRadius_medium QxIconButton QxIconButton_size_medium css-19ftbb2-QxBaseButton-root-QxIconButton-root"
    data-testid="testStyleParams-color-secondary"
    type="button"
  >
    <div
      class="QxIconButton-icon css-10kmd5c-QxIconButton-icon"
    >
      Button
    </div>
  </button>
</DocumentFragment>
`;

exports[`IconButton style params color success 1`] = `
<DocumentFragment>
  <button
    class="QxBaseButton QxBaseButton_size_medium QxBaseButton_color_success QxBaseButton_type_contained QxBaseButton_borderRadius_medium QxIconButton QxIconButton_size_medium css-1cpw16y-QxBaseButton-root-QxIconButton-root"
    data-testid="testStyleParams-color-success"
    type="button"
  >
    <div
      class="QxIconButton-icon css-10kmd5c-QxIconButton-icon"
    >
      Button
    </div>
  </button>
</DocumentFragment>
`;

exports[`IconButton style params color warning 1`] = `
<DocumentFragment>
  <button
    class="QxBaseButton QxBaseButton_size_medium QxBaseButton_color_warning QxBaseButton_type_contained QxBaseButton_borderRadius_medium QxIconButton QxIconButton_size_medium css-1aqmpdh-QxBaseButton-root-QxIconButton-root"
    data-testid="testStyleParams-color-warning"
    type="button"
  >
    <div
      class="QxIconButton-icon css-10kmd5c-QxIconButton-icon"
    >
      Button
    </div>
  </button>
</DocumentFragment>
`;

exports[`IconButton style params loading false 1`] = `
<DocumentFragment>
  <button
    class="QxBaseButton QxBaseButton_size_medium QxBaseButton_color_brand QxBaseButton_type_contained QxBaseButton_borderRadius_medium QxIconButton QxIconButton_size_medium css-8ktg0a-QxBaseButton-root-QxIconButton-root"
    data-testid="testStyleParams-loading-false"
    type="button"
  >
    <div
      class="QxIconButton-icon css-10kmd5c-QxIconButton-icon"
    >
      Button
    </div>
  </button>
</DocumentFragment>
`;

exports[`IconButton style params loading true 1`] = `
<DocumentFragment>
  <button
    class="QxBaseButton QxBaseButton_size_medium QxBaseButton_color_brand QxBaseButton_type_contained QxBaseButton_borderRadius_medium QxBaseButton_loading QxIconButton QxIconButton_size_medium QxIconButton_loading css-1jjenx6-QxBaseButton-root-QxIconButton-root"
    data-testid="testStyleParams-loading-true"
    disabled=""
    type="button"
  >
    <div
      class="QxIconButton-icon css-rv6xp9-QxIconButton-icon"
    >
      Button
    </div>
    <div
      class="QxLoader QxLoader_size_medium QxBaseButton-loader css-1705nxk-QxLoader-root-QxBaseButton-loader"
    >
      <div
        class="QxLoader-dot css-l1am7n-QxLoader-dot"
      />
      <div
        class="QxLoader-dot css-l1am7n-QxLoader-dot"
      />
    </div>
  </button>
</DocumentFragment>
`;

exports[`IconButton style params size large 1`] = `
<DocumentFragment>
  <button
    class="QxBaseButton QxBaseButton_size_large QxBaseButton_color_brand QxBaseButton_type_contained QxBaseButton_borderRadius_medium QxIconButton QxIconButton_size_large css-1lbtzzm-QxBaseButton-root-QxIconButton-root"
    data-testid="testStyleParams-size-large"
    type="button"
  >
    <div
      class="QxIconButton-icon css-10kmd5c-QxIconButton-icon"
    >
      Button
    </div>
  </button>
</DocumentFragment>
`;

exports[`IconButton style params size medium 1`] = `
<DocumentFragment>
  <button
    class="QxBaseButton QxBaseButton_size_medium QxBaseButton_color_brand QxBaseButton_type_contained QxBaseButton_borderRadius_medium QxIconButton QxIconButton_size_medium css-8ktg0a-QxBaseButton-root-QxIconButton-root"
    data-testid="testStyleParams-size-medium"
    type="button"
  >
    <div
      class="QxIconButton-icon css-10kmd5c-QxIconButton-icon"
    >
      Button
    </div>
  </button>
</DocumentFragment>
`;

exports[`IconButton style params size small 1`] = `
<DocumentFragment>
  <button
    class="QxBaseButton QxBaseButton_size_small QxBaseButton_color_brand QxBaseButton_type_contained QxBaseButton_borderRadius_medium QxIconButton QxIconButton_size_small css-1cb0r6h-QxBaseButton-root-QxIconButton-root"
    data-testid="testStyleParams-size-small"
    type="button"
  >
    <div
      class="QxIconButton-icon css-10kmd5c-QxIconButton-icon"
    >
      Button
    </div>
  </button>
</DocumentFragment>
`;

exports[`IconButton style params size xSmall 1`] = `
<DocumentFragment>
  <button
    class="QxBaseButton QxBaseButton_size_xSmall QxBaseButton_color_brand QxBaseButton_type_contained QxBaseButton_borderRadius_medium QxIconButton QxIconButton_size_xSmall css-jb3fu4-QxBaseButton-root-QxIconButton-root"
    data-testid="testStyleParams-size-xSmall"
    type="button"
  >
    <div
      class="QxIconButton-icon css-10kmd5c-QxIconButton-icon"
    >
      Button
    </div>
  </button>
</DocumentFragment>
`;

exports[`IconButton style params type contained 1`] = `
<DocumentFragment>
  <button
    class="QxBaseButton QxBaseButton_size_medium QxBaseButton_color_brand QxBaseButton_type_contained QxBaseButton_borderRadius_medium QxIconButton QxIconButton_size_medium css-8ktg0a-QxBaseButton-root-QxIconButton-root"
    data-testid="testStyleParams-type-contained"
    type="button"
  >
    <div
      class="QxIconButton-icon css-10kmd5c-QxIconButton-icon"
    >
      Button
    </div>
  </button>
</DocumentFragment>
`;

exports[`IconButton style params type outlined 1`] = `
<DocumentFragment>
  <button
    class="QxBaseButton QxBaseButton_size_medium QxBaseButton_color_brand QxBaseButton_type_outlined QxBaseButton_borderRadius_medium QxIconButton QxIconButton_size_medium css-1fvou5g-QxBaseButton-root-QxIconButton-root"
    data-testid="testStyleParams-type-outlined"
    type="button"
  >
    <div
      class="QxIconButton-icon css-10kmd5c-QxIconButton-icon"
    >
      Button
    </div>
  </button>
</DocumentFragment>
`;

exports[`IconButton style params type text 1`] = `
<DocumentFragment>
  <button
    class="QxBaseButton QxBaseButton_size_medium QxBaseButton_color_brand QxBaseButton_type_text QxBaseButton_borderRadius_medium QxIconButton QxIconButton_size_medium css-181lyz2-QxBaseButton-root-QxIconButton-root"
    data-testid="testStyleParams-type-text"
    type="button"
  >
    <div
      class="QxIconButton-icon css-10kmd5c-QxIconButton-icon"
    >
      Button
    </div>
  </button>
</DocumentFragment>
`;
